# fluid-sim

./: CMakeLists.txt
include/glad/: gl.h
lib/glad/: gl.c
shaders/: main.frag  main.vert
src/: constants.h  fluid-sim.cpp  fluid-sim.h  main.cpp  particle.h  shader-file.cpp  shader-file.h
src/imgui/: imgui_impl_sdl2.cpp
